--- a/config/sidekiq.yaml
+++ b/config/sidekiq.yaml
@@ -1,1 +1,7 @@
 :concurrency: 2
+:pidfile: ./tmp/pids/sidekiq.pid
+:logfile: ./log/sidekiq.log
+:queues:
+  - default
+  - [high_priority, 2]
+:daemon: true
